--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,8 +20,28 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding: 20px;
 }
 
+.container {
+  display: flex;
+  align-items: center;
+  
+}
+
+.header {
+  margin-bottom: 5px;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.text {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,6 +53,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -48,6 +69,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  flex-shrink: 0;
 }
 
 button {
