Fixed the Margin below the Input field

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -45,6 +45,14 @@ header{
   align-items: center;
 }
 
+.logo {
+  margin-bottom: 20px;
+}
+
+.input {
+  margin-bottom: 20px;
+}
+
 .footerLinks {
   background-color: grey;
   display: flex;
